--- a/style.css
+++ b/style.css
@@ -1,14 +1,42 @@
-/* All your print styles go here */
+@font-face {
+	font-family: 'Roboto';
+	src: url('Roboto/Roboto-Light.ttf') format('truetype');
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('Roboto/Roboto-LightItalic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('Roboto/Roboto-Bold.ttf') format('truetype');
+	font-weight: bold;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('Roboto/Roboto-BoldItalic.ttf') format('truetype');
+	font-weight: bold;
+	font-style: italic;
+}
+
+html {
+	font-family: 'Roboto', sans-serif;
+}
+
+
+
+
  @page {
   size: A4;
 
   @top-right {
     content: "My title";
   }
-
-}
-
-@page {
 
 }
 
