--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ html {
 }
 
 @page cover-page {
-    background-color: lightcyan;
+    background-color: #334DBD;
+    color: white;
     
     @top-right-corner {
          content: none;
