--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 @font-face {
 	font-family: 'Roboto';
-	src: url('Roboto/Roboto-Light.ttf') format('truetype');
+	src: url('fonts/Roboto-Light.ttf') format('truetype');
 	font-weight: normal;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('Roboto/Roboto-LightItalic.ttf') format('truetype');
+	src: url('fonts/Roboto-LightItalic.ttf') format('truetype');
 	font-weight: normal;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('Roboto/Roboto-Bold.ttf') format('truetype');
+	src: url('fonts/Roboto-Bold.ttf') format('truetype');
 	font-weight: bold;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('Roboto/Roboto-BoldItalic.ttf') format('truetype');
+	src: url('fonts/Roboto-BoldItalic.ttf') format('truetype');
 	font-weight: bold;
 	font-style: italic;
 }
