--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p {
 /* #347dbd #445a75 */
 
 
-@page {
+@page:not(cover-page){
   size: A4;
 
   @top-right {
@@ -44,8 +44,6 @@ p {
   @bottom-right {
         content: counter(page);
   }
-
-  counter-reset: page 1;
 
 }
 
