--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ e.g. adding background color, hiding headers/footers */
 .cover-page { page: cover-page; }
 
 .cover-page h1 {
-	h1 { border-bottom: 1px solid white;
+	border-bottom: 1px solid white; 
 }
 
 @page cover-page {
