--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ break whenever we want by inserting a div of this class */
 
 /* 7. Adding string-set to our <h2> and <h3> tags. We
 also force a page break before every <h2> tag */
-h2 { string-set: section content(text);	break-before: page; }
+h2 { string-set: section content(text);	}
+h2:not(.no-break) { break-before: page; }
 h3 { string-set: subsection content(text); }
 
 /* 8. Adding our dynamic header to the page rules */
