--- a/style.css
+++ b/style.css
@@ -66,7 +66,11 @@ break whenever we want by inserting a div of this class */
 }
 
 /* 7. Adding string-set to our <h2> and <h3> tags. We
-also force a page break before every <h2> tag */
+also force a page break before every <h2> tag.
+Not how we added the class "no-break" to allow us to
+prevent the automatic page break on every h2 tag. For 
+example, we do not want the first h2 tag after the TOC 
+to cause a page break */
 h2 { string-set: section content(text);	}
 h2:not(.no-break) { break-before: page; }
 h3 { string-set: subsection content(text); }
