--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ html { font-family: 'Roboto', sans-serif; }
 h1 { border-bottom: 1px solid black; margin-bottom: 2rem; padding-bottom: 1rem; }
 h2 { border-bottom: 1px solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
 p {	text-align: justify; }
+body { counter-reset: sectionNumber; }
+h2:not(.no-counter) { counter-increment: sectionNumber; }
+h2:not(.no-counter)::before { content: counter(sectionNumber); }
+
 
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
