--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ html { font-family: 'Roboto', sans-serif; }
 h1 { border-bottom: 1px solid black; margin-bottom: 2rem; padding-bottom: 1rem; }
 h2 { border-bottom: 1px solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
 p {	text-align: justify; }
+a { color: #347dbd; }
 body { counter-reset: sectionNumber; counter-reset: subsectionNumber;}
 h2:not(.no-counter) { counter-increment: sectionNumber; counter-reset: subsectionNumber; }
 h2:not(.no-counter)::before {
