--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
         margin: 0 auto;
     }
 
+     .pagedjs_page {
+        background-color: var(--color-paper);
+        box-shadow: 0 0 0 1px var(--color-pageSheet);
+        margin: 0;
+        flex-shrink: 0;
+        flex-grow: 0;
+        margin-top: 10mm;
+    }
+
+
 }
 
 /* 1. Some Font Definitons (just for my own personal
