--- a/style.css
+++ b/style.css
@@ -6,9 +6,14 @@
         flex: 0;
         flex-wrap: wrap;
         margin: 0 auto;
-        border-bottom: solid 1px black;
+
     }
 
+    .pagedjs_page {
+        margin-top: 10mm;
+        margin-bottom: 10mm;
+        border-bottom: solid 1px black;
+    }
 
 
 }
