--- a/style.css
+++ b/style.css
@@ -84,8 +84,9 @@ h3:not(.no-counter)::before { content: counter(sectionNumber) "." counter(subsec
 
 pre {
 	background-color: lightgray;
-	font-family: 'Roboto Monospace', monospace;
-	padding: 0.5rem;
+	font-family: Courier, monospace;
+	padding: 1rem;
+	font-size: smaller;
 }
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
