--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h3:not(.no-counter) { counter-increment: subsectionNumber; }
 h3:not(.no-counter)::before { content: counter(sectionNumber) "." counter(subsectionNumber) " "; }
 
 pre {
-	background-color: lightgray;
+	background-color: #f0f0f0;
 	font-family: Courier, monospace;
 	padding: 1rem;
 	font-size: smaller;
