--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ preference, below is not required for producing pdfs) */
 
 @font-face {
 	font-family: 'Custom Mono';
-	src: url('fonts/RobotoMono-Light.ttf') format('truetype');
+	src: url('fonts/RobotoMono-Medium.ttf') format('truetype');
 }
 
 
@@ -82,7 +82,7 @@ pre {
 	font-size: smaller;
 }
 
-fig { margin-top: 2rem; }
+fig { padding-top: 2rem; padding-bottom: 2rem;}
 figcaption { caption-side: top; font-size: smaller; font-family: 'Custom Mono', monospace; } 
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
