--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ pre {
 	font-size: smaller;
 }
 
-figure { margin-top: 1rem; margin-bottom: 2rem;}
+figure { margin-block-start: 2rem; margin-block-end: 2rem; }
 figcaption { caption-side: top; font-size: smaller; font-family: 'Custom Mono', monospace; } 
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
