--- a/style.css
+++ b/style.css
@@ -77,13 +77,13 @@ a { color: #347dbd; text-decoration: none; }
 a:hover { color: #FC814A; }
 
 body {
-	counter-reset: sectionNumber;
+	counter-reset: sectionaNumber;
 	counter-reset: subsectionNumber;
 	counter-reset: figureNumber;
 }
 
 h2:not(.no-counter) {
-	counter-increment: sectionNumber;
+	counter-increment: sectionaNumber;
 	counter-reset: subsectionNumber;
 	counter-reset: figureNumber; 
 }
