--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ preference, below is not required for producing pdfs) */
 preference, below is not required for producing pdfs) */
 html { font-family: 'Roboto', sans-serif; font-size: 100%; color: #211A1D;}
 h1 { border-bottom: 1px solid black; margin-bottom: 2rem; padding-bottom: 1rem; }
-h2 { border-bottom: 1px solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
+h2 { border-bottom: 0.25rem solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
 p {	text-align: justify; line-height: 1.4rem;}
 a { color: #347dbd; text-decoration: none; }
 a:hover { color: #FC814A; }
