--- a/style.css
+++ b/style.css
@@ -119,11 +119,6 @@ figcaption[class*='counter']::before {
 }
 
 
-
-
-
-
-
 pre {
 	background-color: #f0f0f0;
 	font-family: 'Custom Mono', monospace;
@@ -195,7 +190,7 @@ e.g. adding background color, hiding headers/footers */
 .cover-page { page: cover-page; }
 
 .cover-page h1 {
-	border-bottom: 1px solid white; 
+	border-bottom: 0.5rem solid white; 
 }
 
 @page cover-page {
