--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:hover { color: #FC814A; font-family: 'Roboto Medium', sans-serif;}
 }
 
 mark {
-	color: #445a75;
+	color: #E0A458;
 	font-family: 'Custom Mono', monospace;
 }
 
