--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ a:hover { color: #FC814A; font-family: 'Roboto Medium', sans-serif;}
 }
 
 mark {
-	color: #E0A458;
+	color: #7E5920;
+	background-color: inherit;
 	font-family: 'Custom Mono', monospace;
 }
 
