--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/* Colors:
+
+Brown 7E5920;
+Yellow Orange FFA737;
+Dark Sea Green: 94C595;
+Dark Salmon: F78E69;
+Mellow Apricot: F1BB87;
+*/
+
 @media screen {
 
 	 .pagedjs_pages {
