--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a:hover { color: #FC814A; font-family: 'Roboto Medium', sans-serif;}
 }
 
 mark {
-	color: #7E5920;
+	color: #F78E69;
 	background-color: inherit;
 	font-family: 'Custom Mono', monospace;
 	font-weight: bold;
